# ImageClassifier

./: .gitignore  pyproject.toml
configs/ml/: config.yaml  hydra_cfg.yaml
configs/ml/exp/: example.yaml
image_classifier/: main.py
image_classifier/configs/: base.py  cfg_hyper_params.py  cfg_optimizer.py  cfg_train.py
image_classifier/ml/: config.py  device.py  updater.py  writer.py
image_classifier/ml/data/: dataloader.py
image_classifier/ml/networks/: net.py
image_classifier/ml/optimizers/: build.py
scripts/: run_mlflow.sh
